--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
                 </div>
                 <div class="headline__social-media">
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="/img/fb-icon.png"
+                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/fb-icon.png"
                             alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="/img/pinterest-icon.png"
+                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/pinterest-icon.png"
                             alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="/img/twiiter-icon.png"
+                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/twiiter-icon.png"
                             alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="/img/mail-icon.png"
+                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/mail-icon.png"
                             alt=""></a>
                 </div>
                 <!-- <video>Video goes here</video> -->
