fix image not loading

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     Graham‘s podcast Pretty Big Deal. “She said to me the other day, ‘Mom … we just need to have
                     another baby brother so that Saint can just leave me alone … so the girls can be on this side of
                     the house and the boys can be on that side of the house.’ “</p>
-                <img src="/img/img-5.jpg" class="img-responsive" alt="">
+                <img src="img/img-5.jpg" class="img-responsive" alt="">
                 <p class="img-desc">North and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span></p>
-                <img src="/img/img-6.jpg" class="img-responsive" alt="">
+                <img src="img/img-6.jpg" class="img-responsive" alt="">
                 <p class="img-desc">Saint and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span></p>
                 <p>RELATED GALLERY: 33 Famous Families Who’ve Welcomed Children Through Surrogacy</p>
                 <p>Though Kardashian West has been candid about her fears surrounding surrogacy and how she thinks it
@@ -125,7 +125,7 @@
     </main>
     <footer class="footer">
         <div class="footer-logo">
-            <img src="/img/people-logo.png" alt="people logo">
+            <img src="img/people-logo.png" alt="people logo">
         </div>
         <div class="footer-inner-container">
             <div class="footer-inner-container-left">
@@ -145,7 +145,7 @@
                 <h2>Connect</h2>
                 <ul>
                     <li>Follow Us</li>
-                    <li><img src="/img/footer/footer-social-media.png" alt="social media icons"></li>
+                    <li><img src="img/footer/footer-social-media.png" alt="social media icons"></li>
                 </ul>
                 <span>Subscribe to Our Newsletter</span>
                 <button>Sign Up</button>
