--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </main>
     <footer class="footer">
         <div class="footer-logo">
-            <img src="img/people-logo.png" alt="people logo">
+            <img class="footer-logo-img" src="img/footer/people-footer-logo.png" alt="people logo" />
         </div>
         <div class="footer-inner-container">
             <div class="footer-inner-container-left">
@@ -134,7 +134,7 @@
             </div>
             <div class="footer-inner-container-middle">
                 <h2>Learn More</h2>
-                <ul>
+                <ul class="footer-inner-container-middle--links">
                     <li>Subscribe</li>
                     <li>Advertise</li>
                     <li>Sitemap</li>
@@ -143,12 +143,12 @@
             </div>
             <div class="footer-inner-container-right">
                 <h2>Connect</h2>
-                <ul>
+                <ul class="footer-inner-container-right--links">
                     <li>Follow Us</li>
-                    <li><img src="img/footer/footer-social-media.png" alt="social media icons"></li>
+                    <li><img class="footer-inner-container-right--media" src="img/footer/footer-social-media.png" alt="social media icons"></li>
                 </ul>
-                <span>Subscribe to Our Newsletter</span>
-                <button>Sign Up</button>
+                    <span>Subscribe to Our Newsletter</span>
+                    <button>Sign Up</button>
             </div>
         </div>
     </footer>
