media query for footer

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                     <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/mail-icon.png"
                             alt=""></a>
                 </div>
-                <!-- <video>Video goes here</video> -->
-                <p class="headline__author"></p>
+                <div class="photo-headline">
+                    <img  class="img-responsive" src="img/img-video.png" alt="video smaple photo">
+                </div>
             </section>
 
             <section class="main-content">
@@ -98,7 +99,6 @@
                     Beauty guru also told the outlet. “We start filming season 16 next week, so if I think about it
                     more and it’s gonna happen, you’ll definitely see it on the show. But as of now, no.”</p>
                 <p>RELATED VIDEO: Kim Kardashian West Is Considering Asking Surrogate to Carry Another Baby</p>
-                <video></video>
                 <p>In October, Kardashian West revealed that daughter North is a little apprehensive about her existing
                     siblings, admitting that her oldest “acts like an only child at all times” and is “a little
                     confused” about her family dynamic.</p>
