--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kim Kardashian and Kanye West expecting fourth child via surrogate | PEOPLE.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-    <link rel="shortcut icon" type="image/png" href="img/tab-logo.png">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css"> -->
+    <link rel="shortcut icon" type="image/png" href="img/people-tab-logo.png">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
 </head>
 
@@ -34,16 +34,16 @@
             <!-- </div> -->
         </nav>
     </header>
-    <main>
+
+    <main class="main-container">
         <div class="container">
             <section class="headline-container">
                 <ul class="headline-top-links">
                     <li><a class="headline-home-link">Home</a> </li>
                     <li><a class="headline-parents-link">Parents</a></li>
                 </ul>
-                <div class="test">
+                <div>
                     <h1 class="headline__heading">Kim Kardashian and Kanye West Expecting Fourth Child Via Surrogate</h1>
-
                 </div>
                 <div class="headline__social-media">
                     <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/fb-icon.png"
@@ -55,9 +55,10 @@
                     <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/mail-icon.png"
                             alt=""></a>
                 </div>
-                <div class="photo-headline">
-                    <img  class="img-responsive" src="img/img-video.png" alt="video smaple photo">
-                </div>
+
+                <figure class="headline-container-photo">
+                    <img  class="headline-container-photo--img" src="img/img-video.png" alt="video smaple photo">
+                </figure>
             </section>
 
             <section class="main-content">
@@ -74,14 +75,28 @@
                 <p>Want all the latest pregnancy and birth announcements, plus celebrity mom blogs? Click here to get
                     those and more in the PEOPLE Parents newsletter.</p>
 
-                <img src="img/img-1.jpg" class="img-responsive" alt="first image" />
-                <p class="img-desc">Kim Kardashian West/Twitter</p>
-                <img src="img/img-2.jpg" class="img-responsive" alt="second image" />
-                <p class="img-desc">Kanye and Kim Kardashian West with daughter Chicago<span class="img-desc--author">Marcus
-                        Hyde</span></p>
-                <img src="img/img-3.jpg" class="img-responsive" alt="third image" />
-                <p class="img-desc">Kanye West and son Saint<span class="img-desc--author">Kim Kardashian/Snapchat</span></p>
+                    <figure class="figure-container">
+                        <img src="img/img-1.jpg" class="img-responsive" alt="first image" />
+                        <figcaption class="img-desc">
+                            Kim Kardashian West/Twitter
+                        </figcaption>
+                    </figure>
 
+                    <figure class="figure-container">
+                        <img src="img/img-2.jpg" class="img-responsive" alt="second image" />
+                        <figcaption class="img-desc">
+                            Kanye and Kim Kardashian West with daughter Chicago<span class="img-desc--author">Marcus
+                                Hyde</span>
+                        </figcaption>
+                    </figure>
+
+
+                    <figure class="figure-container">
+                        <img src="img/img-3.jpg" class="img-responsive" alt="third image" />
+                        <figcaption class="img-desc">
+                            Kanye West and son Saint<span class="img-desc--author">Kim Kardashian/Snapchat</span>
+                        </figcaption>
+                    </figure>
 
                 <p>RELATED GALLERY: Kim Kardashian Reveals If She and Kanye West Are Planning for Baby No. 4</p>
                 <p>“They don’t seem to be in a huge rush,” the source further revealed. “They would use the same
@@ -89,10 +104,13 @@
                 <p>A second insider told PEOPLE, “Kim and Kanye were already talking about baby No. 4 when Chicago was
                     just a couple of days old. And they absolutely would use the surrogate again. They love her.”</p>
 
-                <img src="img/img-4.jpg" class="img-responsive" alt="fourth image">
-                <p class="img-desc">Kim Kardashian West and daughter North<span class="img-desc--author">Kim
-                        Kardashian/Instagram</span></p>
-
+                    <figure class="figure-container">
+                        <img src="img/img-4.jpg" class="img-responsive" alt="fourth image">
+                        <figcaption class="img-desc">
+                            Kim Kardashian West and daughter North<span class="img-desc--author">Kim
+                                Kardashian/Instagram</span>
+                        </figcaption>
+                    </figure>
 
                 <p>Kardashian West herself has expressed similar thoughts. As she said in an August interview with E!
                     News after being asked if she and her husband were planning for a fourth child, “I don’t know. I
@@ -108,10 +126,21 @@
                     Graham‘s podcast Pretty Big Deal. “She said to me the other day, ‘Mom … we just need to have
                     another baby brother so that Saint can just leave me alone … so the girls can be on this side of
                     the house and the boys can be on that side of the house.’ “</p>
-                <img src="img/img-5.jpg" class="img-responsive" alt="">
-                <p class="img-desc">North and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span></p>
-                <img src="img/img-6.jpg" class="img-responsive" alt="">
-                <p class="img-desc">Saint and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span></p>
+
+                    <figure class="figure-container">
+                        <img src="img/img-5.jpg" class="img-responsive" alt="">
+                        <figcaption class="img-desc">
+                            North and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
+                        </figcaption>
+                    </figure>
+                
+
+                    <figure class="figure-container">
+                        <img src="img/img-6.jpg" class="img-responsive" alt="">
+                        <figcaption class="img-desc">
+                            Saint and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
+                        </figcaption>
+                    </figure>
                 <p>RELATED GALLERY: 33 Famous Families Who’ve Welcomed Children Through Surrogacy</p>
                 <p>Though Kardashian West has been candid about her fears surrounding surrogacy and how she thinks it
                     “is so much harder” than pregnancy, she opened up in May about how it ultimately was an
