add media queries for all devices size

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </section>
 
             <section class="main-content">
+                <h2>Kanye and Kim Kardashian West are set to welcome another baby into their household that already includes daughters Chicago and North, plus son Saint</h2>
                 <p>There’s a new little one heading West!</p>
                 <p>Kanye and Kim Kardashian West are expecting their fourth child via surrogate, PEOPLE has confirmed.</p>
                 <p>The baby on the way will join big siblings Chicago, 1 this month, Saint, 3, and North, 5½.</p>
