--- a/index.html
+++ b/index.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kim Kardashian and Kanye West expecting fourth child via surrogate | PEOPLE.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css"> -->
     <link rel="shortcut icon" type="image/png" href="img/people-tab-logo.png">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
 
 <body>
     <header>
         <nav class="navbar">
-            <!-- <div class="navbar-nav-container"> -->
-                <div class="navbar-left-container">
-                    <a href="#" class="navbar-hamburger-logo-link"><img class="navbar-hamburger-logo" src="./img/hamburger.png"
-                            alt="menu logo"></a>
-                    <a href="#" class="navbar-font-1">Explore</a>
-                    <a href="#" class="navbar-brand-logo-link"><img class="navbar-brand-logo-img" src="./img/people-logo.png"
-                            alt="Brand logo link"></a>
-                </div>
-
-                <div class="navbar-right-container">
-                    <a href="#"><img class="navbar__search-icon" src="./img/search-icon.png" alt="" /></a>
-                    <a href="#" class="navbar-font-2">Your Profile<i class="glyphicon glyphicon-triangle-bottom"></i></a>
-                    <span class="navbar__vertical-line"></span>
-                    <a href="#" class="navbar-font-3 ">Subuscribe</a>
-                </div>
-                
-            <!-- </div> -->
+            <!-- NAVBAR -->
+            <ul class="navbar__left">
+                <li class="navbar__hamburger"><img class="navbar__hamburger-menu" src="./img/hamburger.png" alt="menu logo"></li>
+                <li class="navbar__left-list"><a href="#" class="navbar__left-text">Explore</a></li>
+                <li class="navbar__site-logo"><img class="navbar__site-logo-img" src="./img/people-logo.png" alt="Brand logo link"></li>
+            </ul>
+            <ul class="navbar__right">
+                <li class="navbar__search"><img class="navbar__search-icon" src="./img/search-icon.png" alt="" /></a></li>
+                <li> <a href="#" class="navbar__right-text">Your Profile</a></li>
+                <li><span class="navbar__right-vertical-line"></span></li>
+                <li> <a href="#" class="navbar__right-text-active ">Subuscribe</a></li>
+            </ul>
         </nav>
     </header>
-
+    <!-- MAIN SECTION -->
     <main class="main-container">
         <div class="container">
             <section class="headline-container">
@@ -43,28 +37,29 @@
                     <li><a class="headline-parents-link">Parents</a></li>
                 </ul>
                 <div>
-                    <h1 class="headline__heading">Kim Kardashian and Kanye West Expecting Fourth Child Via Surrogate</h1>
+                    <h1 class="headline__heading">Kim Kardashian and Kanye West Expecting Fourth Child Via Surrogate
+                    </h1>
                 </div>
                 <div class="headline__social-media">
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/fb-icon.png"
-                            alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/pinterest-icon.png"
-                            alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/twiiter-icon.png"
-                            alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons" src="img/mail-icon.png"
-                            alt=""></a>
+                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons"
+                            src="img/fb-icon.png" alt=""></a>
+                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons"
+                            src="img/pinterest-icon.png" alt=""></a>
+                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons"
+                            src="img/twiiter-icon.png" alt=""></a>
+                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons"
+                            src="img/mail-icon.png" alt=""></a>
                 </div>
-
                 <figure class="headline-container-photo">
-                    <img  class="headline-container-photo--img" src="img/img-video.png" alt="video smaple photo">
+                    <img class="headline-container-photo--img" src="img/img-video.png" alt="video smaple photo">
                 </figure>
             </section>
-
             <section class="main-content">
-                <h2>Kanye and Kim Kardashian West are set to welcome another baby into their household that already includes daughters Chicago and North, plus son Saint</h2>
+                <h2>Kanye and Kim Kardashian West are set to welcome another baby into their household that already
+                    includes daughters Chicago and North, plus son Saint</h2>
                 <p>There’s a new little one heading West!</p>
-                <p>Kanye and Kim Kardashian West are expecting their fourth child via surrogate, PEOPLE has confirmed.</p>
+                <p>Kanye and Kim Kardashian West are expecting their fourth child via surrogate, PEOPLE has confirmed.
+                </p>
                 <p>The baby on the way will join big siblings Chicago, 1 this month, Saint, 3, and North, 5½.</p>
                 <p>Although Kardashian West has made it clear that she loves being a mother, in August, a Keeping Up
                     with the Kardashians source told PEOPLE that the 38-year-old reality star and rapper West, 41,
@@ -75,44 +70,39 @@
                     and they have time.”</p>
                 <p>Want all the latest pregnancy and birth announcements, plus celebrity mom blogs? Click here to get
                     those and more in the PEOPLE Parents newsletter.</p>
+                <figure class="figure-container">
+                    <img src="img/img-1.jpg" class="img-responsive" alt="first image" />
+                    <figcaption class="img-desc">
+                        Kim Kardashian West/Twitter
+                    </figcaption>
+                </figure>
 
-                    <figure class="figure-container">
-                        <img src="img/img-1.jpg" class="img-responsive" alt="first image" />
-                        <figcaption class="img-desc">
-                            Kim Kardashian West/Twitter
-                        </figcaption>
-                    </figure>
-
-                    <figure class="figure-container">
-                        <img src="img/img-2.jpg" class="img-responsive" alt="second image" />
-                        <figcaption class="img-desc">
-                            Kanye and Kim Kardashian West with daughter Chicago<span class="img-desc--author">Marcus
-                                Hyde</span>
-                        </figcaption>
-                    </figure>
-
-
-                    <figure class="figure-container">
-                        <img src="img/img-3.jpg" class="img-responsive" alt="third image" />
-                        <figcaption class="img-desc">
-                            Kanye West and son Saint<span class="img-desc--author">Kim Kardashian/Snapchat</span>
-                        </figcaption>
-                    </figure>
-
+                <figure class="figure-container">
+                    <img src="img/img-2.jpg" class="img-responsive" alt="second image" />
+                    <figcaption class="img-desc">
+                        Kanye and Kim Kardashian West with daughter Chicago<span class="img-desc--author">Marcus
+                            Hyde</span>
+                    </figcaption>
+                </figure>
+                <figure class="figure-container">
+                    <img src="img/img-3.jpg" class="img-responsive" alt="third image" />
+                    <figcaption class="img-desc">
+                        Kanye West and son Saint<span class="img-desc--author">Kim Kardashian/Snapchat</span>
+                    </figcaption>
+                </figure>
                 <p>RELATED GALLERY: Kim Kardashian Reveals If She and Kanye West Are Planning for Baby No. 4</p>
                 <p>“They don’t seem to be in a huge rush,” the source further revealed. “They would use the same
-                    surrogate if she agrees to help them again. Kim can’t say enough kind words about the surrogate.”</p>
+                    surrogate if she agrees to help them again. Kim can’t say enough kind words about the surrogate.”
+                </p>
                 <p>A second insider told PEOPLE, “Kim and Kanye were already talking about baby No. 4 when Chicago was
                     just a couple of days old. And they absolutely would use the surrogate again. They love her.”</p>
-
-                    <figure class="figure-container">
-                        <img src="img/img-4.jpg" class="img-responsive" alt="fourth image">
-                        <figcaption class="img-desc">
-                            Kim Kardashian West and daughter North<span class="img-desc--author">Kim
-                                Kardashian/Instagram</span>
-                        </figcaption>
-                    </figure>
-
+                <figure class="figure-container">
+                    <img src="img/img-4.jpg" class="img-responsive" alt="fourth image">
+                    <figcaption class="img-desc">
+                        Kim Kardashian West and daughter North<span class="img-desc--author">Kim
+                            Kardashian/Instagram</span>
+                    </figcaption>
+                </figure>
                 <p>Kardashian West herself has expressed similar thoughts. As she said in an August interview with E!
                     News after being asked if she and her husband were planning for a fourth child, “I don’t know. I
                     read something that it was, you know — none of that was true.”</p>
@@ -127,21 +117,18 @@
                     Graham‘s podcast Pretty Big Deal. “She said to me the other day, ‘Mom … we just need to have
                     another baby brother so that Saint can just leave me alone … so the girls can be on this side of
                     the house and the boys can be on that side of the house.’ “</p>
-
-                    <figure class="figure-container">
-                        <img src="img/img-5.jpg" class="img-responsive" alt="">
-                        <figcaption class="img-desc">
-                            North and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
-                        </figcaption>
-                    </figure>
-                
-
-                    <figure class="figure-container">
-                        <img src="img/img-6.jpg" class="img-responsive" alt="">
-                        <figcaption class="img-desc">
-                            Saint and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
-                        </figcaption>
-                    </figure>
+                <figure class="figure-container">
+                    <img src="img/img-5.jpg" class="img-responsive" alt="">
+                    <figcaption class="img-desc">
+                        North and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
+                    </figcaption>
+                </figure>
+                <figure class="figure-container">
+                    <img src="img/img-6.jpg" class="img-responsive" alt="">
+                    <figcaption class="img-desc">
+                        Saint and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
+                    </figcaption>
+                </figure>
                 <p>RELATED GALLERY: 33 Famous Families Who’ve Welcomed Children Through Surrogacy</p>
                 <p>Though Kardashian West has been candid about her fears surrounding surrogacy and how she thinks it
                     “is so much harder” than pregnancy, she opened up in May about how it ultimately was an
@@ -155,6 +142,7 @@
             </section>
         </div>
     </main>
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-logo">
             <img class="footer-logo-img" src="img/footer/people-footer-logo.png" alt="people logo" />
@@ -177,10 +165,11 @@
                 <h2>Connect</h2>
                 <ul class="footer-inner-container-right--links">
                     <li>Follow Us</li>
-                    <li><img class="footer-inner-container-right--media" src="img/footer/footer-social-media.png" alt="social media icons"></li>
+                    <li><img class="footer-inner-container-right--media" src="img/footer/footer-social-media.png"
+                            alt="social media icons"></li>
                 </ul>
-                    <span>Subscribe to Our Newsletter</span>
-                    <button>Sign Up</button>
+                <span>Subscribe to Our Newsletter</span>
+                <button>Sign Up</button>
             </div>
         </div>
     </footer>
