--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
         <nav class="navbar">
             <!-- NAVBAR -->
             <ul class="navbar__left">
-                <li class="navbar__hamburger"><img class="navbar__hamburger-menu" src="./img/hamburger.png" alt="menu logo"></li>
+                <li class="navbar__hamburger"><img class="navbar__hamburger-menu" src="./img/hamburger.png"
+                        alt="menu logo"></li>
                 <li class="navbar__left-list"><a href="#" class="navbar__left-text">Explore</a></li>
-                <li class="navbar__site-logo"><img class="navbar__site-logo-img" src="./img/people-logo.png" alt="Brand logo link"></li>
+                <li class="navbar__site-logo"><img class="navbar__site-logo-img" src="./img/people-logo.png"
+                        alt="Brand logo link"></li>
             </ul>
             <ul class="navbar__right">
-                <li class="navbar__search"><img class="navbar__search-icon" src="./img/search-icon.png" alt="" /></a></li>
+                <li class="navbar__search"><img class="navbar__search-icon" src="./img/search-icon.png" alt="" /></a>
+                </li>
                 <li> <a href="#" class="navbar__right-text">Your Profile</a></li>
                 <li><span class="navbar__right-vertical-line"></span></li>
                 <li> <a href="#" class="navbar__right-text-active ">Subuscribe</a></li>
@@ -30,117 +33,105 @@
     </header>
     <!-- MAIN SECTION -->
     <main class="main-container">
-        <div class="container">
-            <section class="headline-container">
-                <ul class="headline-top-links">
-                    <li><a class="headline-home-link">Home</a> </li>
-                    <li><a class="headline-parents-link">Parents</a></li>
-                </ul>
-                <div>
-                    <h1 class="headline__heading">Kim Kardashian and Kanye West Expecting Fourth Child Via Surrogate
-                    </h1>
-                </div>
-                <div class="headline__social-media">
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons"
-                            src="img/fb-icon.png" alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons"
-                            src="img/pinterest-icon.png" alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons"
-                            src="img/twiiter-icon.png" alt=""></a>
-                    <a href="#" class="headline__social-media-links "><img class="headline__social-media--icons"
-                            src="img/mail-icon.png" alt=""></a>
-                </div>
-                <figure class="headline-container-photo">
-                    <img class="headline-container-photo--img" src="img/img-video.png" alt="video smaple photo">
-                </figure>
-            </section>
-            <section class="main-content">
-                <h2>Kanye and Kim Kardashian West are set to welcome another baby into their household that already
-                    includes daughters Chicago and North, plus son Saint</h2>
-                <p>There’s a new little one heading West!</p>
-                <p>Kanye and Kim Kardashian West are expecting their fourth child via surrogate, PEOPLE has confirmed.
-                </p>
-                <p>The baby on the way will join big siblings Chicago, 1 this month, Saint, 3, and North, 5½.</p>
-                <p>Although Kardashian West has made it clear that she loves being a mother, in August, a Keeping Up
-                    with the Kardashians source told PEOPLE that the 38-year-old reality star and rapper West, 41,
-                    weren’t “in a huge rush” to give their three children another sibling.</p>
-                <p>“They have absolutely talked about trying for another baby with the help of a surrogate, but nothing
-                    seems decided for sure,” said the insider, adding of the couple’s then-7-month-old daughter, who
-                    was the only one of their children to be born via gestational surrogate, “Chicago is still little,
-                    and they have time.”</p>
-                <p>Want all the latest pregnancy and birth announcements, plus celebrity mom blogs? Click here to get
-                    those and more in the PEOPLE Parents newsletter.</p>
-                <figure class="figure-container">
-                    <img src="img/img-1.jpg" class="img-responsive" alt="first image" />
-                    <figcaption class="img-desc">
-                        Kim Kardashian West/Twitter
-                    </figcaption>
-                </figure>
+        <section class="headline">
+            <ul class="headline__top-link">
+                <li><a class="headline__top-link-text">Home</a> </li>
+                <li><a class="headline__top-link-text">Parents</a></li>
+            </ul>
+                <h1 class="headline__heading">Kim Kardashian and Kanye West Expecting Fourth Child Via Surrogate</h1>
+            <div class="headline__social-media">
+               <img class="headline__social-media-img" src="img/social-media.png" alt="social media icons">
+            </div>
+            <figure class="headline__photo">
+                <img class="headline__photo--img" src="img/img-video.png" alt="video smaple photo">
+            </figure>
+        </section>
+        <article class="main-content">
+            <h2 class="main-content__headline">Kanye and Kim Kardashian West are set to welcome another baby into their household that already
+                includes daughters Chicago and North, plus son Saint</h2>
+            <p class="main-content__paragraph">There’s a new little one heading West!</p>
+            <p class="main-content__paragraph">Kanye and Kim Kardashian West are expecting their fourth child via surrogate, PEOPLE has confirmed.
+            </p>
+            <p class="main-content__paragraph">The baby on the way will join big siblings Chicago, 1 this month, Saint, 3, and North, 5½.</p>
+            <p class="main-content__paragraph">Although Kardashian West has made it clear that she loves being a mother, in August, a Keeping Up
+                with the Kardashians source told PEOPLE that the 38-year-old reality star and rapper West, 41,
+                weren’t “in a huge rush” to give their three children another sibling.</p>
+            <p class="main-content__paragraph">“They have absolutely talked about trying for another baby with the help of a surrogate, but nothing
+                seems decided for sure,” said the insider, adding of the couple’s then-7-month-old daughter, who
+                was the only one of their children to be born via gestational surrogate, “Chicago is still little,
+                and they have time.”</p>
+            <p class="main-content__paragraph">Want all the latest pregnancy and birth announcements, plus celebrity mom blogs? Click here to get
+                those and more in the PEOPLE Parents newsletter.</p>
+            <figure class="figure-container">
+                <img src="img/img-1.jpg" class="img-responsive" alt="first image" />
+                <figcaption class="img-desc">
+                    Kim Kardashian West/Twitter
+                </figcaption>
+            </figure>
 
-                <figure class="figure-container">
-                    <img src="img/img-2.jpg" class="img-responsive" alt="second image" />
-                    <figcaption class="img-desc">
-                        Kanye and Kim Kardashian West with daughter Chicago<span class="img-desc--author">Marcus
-                            Hyde</span>
-                    </figcaption>
-                </figure>
-                <figure class="figure-container">
-                    <img src="img/img-3.jpg" class="img-responsive" alt="third image" />
-                    <figcaption class="img-desc">
-                        Kanye West and son Saint<span class="img-desc--author">Kim Kardashian/Snapchat</span>
-                    </figcaption>
-                </figure>
-                <p>RELATED GALLERY: Kim Kardashian Reveals If She and Kanye West Are Planning for Baby No. 4</p>
-                <p>“They don’t seem to be in a huge rush,” the source further revealed. “They would use the same
-                    surrogate if she agrees to help them again. Kim can’t say enough kind words about the surrogate.”
-                </p>
-                <p>A second insider told PEOPLE, “Kim and Kanye were already talking about baby No. 4 when Chicago was
-                    just a couple of days old. And they absolutely would use the surrogate again. They love her.”</p>
-                <figure class="figure-container">
-                    <img src="img/img-4.jpg" class="img-responsive" alt="fourth image">
-                    <figcaption class="img-desc">
-                        Kim Kardashian West and daughter North<span class="img-desc--author">Kim
-                            Kardashian/Instagram</span>
-                    </figcaption>
-                </figure>
-                <p>Kardashian West herself has expressed similar thoughts. As she said in an August interview with E!
-                    News after being asked if she and her husband were planning for a fourth child, “I don’t know. I
-                    read something that it was, you know — none of that was true.”</p>
-                <p>“But I’ve been really open about it and talked about it on our show, so I don’t know,” the KKW
-                    Beauty guru also told the outlet. “We start filming season 16 next week, so if I think about it
-                    more and it’s gonna happen, you’ll definitely see it on the show. But as of now, no.”</p>
-                <p>RELATED VIDEO: Kim Kardashian West Is Considering Asking Surrogate to Carry Another Baby</p>
-                <p>In October, Kardashian West revealed that daughter North is a little apprehensive about her existing
-                    siblings, admitting that her oldest “acts like an only child at all times” and is “a little
-                    confused” about her family dynamic.</p>
-                <p>“She’s beyond jealousy now. She’s just like, ‘It’s my world,’ ” the reality star said on Ashley
-                    Graham‘s podcast Pretty Big Deal. “She said to me the other day, ‘Mom … we just need to have
-                    another baby brother so that Saint can just leave me alone … so the girls can be on this side of
-                    the house and the boys can be on that side of the house.’ “</p>
-                <figure class="figure-container">
-                    <img src="img/img-5.jpg" class="img-responsive" alt="">
-                    <figcaption class="img-desc">
-                        North and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
-                    </figcaption>
-                </figure>
-                <figure class="figure-container">
-                    <img src="img/img-6.jpg" class="img-responsive" alt="">
-                    <figcaption class="img-desc">
-                        Saint and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
-                    </figcaption>
-                </figure>
-                <p>RELATED GALLERY: 33 Famous Families Who’ve Welcomed Children Through Surrogacy</p>
-                <p>Though Kardashian West has been candid about her fears surrounding surrogacy and how she thinks it
-                    “is so much harder” than pregnancy, she opened up in May about how it ultimately was an
-                    overwhelmingly positive experience.</p>
-                <p>“I would have maybe one more [child],” she admitted. “I really, really enjoyed the surrogacy
-                    process. I will say, when it came to the breastfeeding time, I was like, ‘Okay, this is the best
-                    decision I ever made.’ “</p>
-                <p>“It’s a game changer, having to not go through [nursing] every few hours,” explained the soon-to-be
-                    mother of four. “I can spend so much more time with the older kids and getting them used to the
-                    baby.”</p>
-            </section>
-        </div>
+            <figure class="figure-container">
+                <img src="img/img-2.jpg" class="img-responsive" alt="second image" />
+                <figcaption class="img-desc">
+                    Kanye and Kim Kardashian West with daughter Chicago<span class="img-desc--author">Marcus
+                        Hyde</span>
+                </figcaption>
+            </figure>
+            <figure class="figure-container">
+                <img src="img/img-3.jpg" class="img-responsive" alt="third image" />
+                <figcaption class="img-desc">
+                    Kanye West and son Saint<span class="img-desc--author">Kim Kardashian/Snapchat</span>
+                </figcaption>
+            </figure>
+            <p class="main-content__paragraph">RELATED GALLERY: Kim Kardashian Reveals If She and Kanye West Are Planning for Baby No. 4</p>
+            <p class="main-content__paragraph">“They don’t seem to be in a huge rush,” the source further revealed. “They would use the same
+                surrogate if she agrees to help them again. Kim can’t say enough kind words about the surrogate.”
+            </p>
+            <p class="main-content__paragraph">A second insider told PEOPLE, “Kim and Kanye were already talking about baby No. 4 when Chicago was
+                just a couple of days old. And they absolutely would use the surrogate again. They love her.”</p>
+            <figure class="figure-container">
+                <img src="img/img-4.jpg" class="img-responsive" alt="fourth image">
+                <figcaption class="img-desc">
+                    Kim Kardashian West and daughter North<span class="img-desc--author">Kim
+                        Kardashian/Instagram</span>
+                </figcaption>
+            </figure>
+            <p class="main-content__paragraph">Kardashian West herself has expressed similar thoughts. As she said in an August interview with E!
+                News after being asked if she and her husband were planning for a fourth child, “I don’t know. I
+                read something that it was, you know — none of that was true.”</p>
+            <p class="main-content__paragraph">“But I’ve been really open about it and talked about it on our show, so I don’t know,” the KKW
+                Beauty guru also told the outlet. “We start filming season 16 next week, so if I think about it
+                more and it’s gonna happen, you’ll definitely see it on the show. But as of now, no.”</p>
+            <p class="main-content__paragraph">RELATED VIDEO: Kim Kardashian West Is Considering Asking Surrogate to Carry Another Baby</p>
+            <p class="main-content__paragraph">In October, Kardashian West revealed that daughter North is a little apprehensive about her existing
+                siblings, admitting that her oldest “acts like an only child at all times” and is “a little
+                confused” about her family dynamic.</p>
+            <p class="main-content__paragraph">“She’s beyond jealousy now. She’s just like, ‘It’s my world,’ ” the reality star said on Ashley
+                Graham‘s podcast Pretty Big Deal. “She said to me the other day, ‘Mom … we just need to have
+                another baby brother so that Saint can just leave me alone … so the girls can be on this side of
+                the house and the boys can be on that side of the house.’ “</p>
+            <figure class="figure-container">
+                <img src="img/img-5.jpg" class="img-responsive" alt="">
+                <figcaption class="img-desc">
+                    North and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
+                </figcaption>
+            </figure>
+            <figure class="figure-container">
+                <img src="img/img-6.jpg" class="img-responsive" alt="">
+                <figcaption class="img-desc">
+                    Saint and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
+                </figcaption>
+            </figure>
+            <p class="main-content__paragraph">RELATED GALLERY: 33 Famous Families Who’ve Welcomed Children Through Surrogacy</p>
+            <p class="main-content__paragraph">Though Kardashian West has been candid about her fears surrounding surrogacy and how she thinks it
+                “is so much harder” than pregnancy, she opened up in May about how it ultimately was an
+                overwhelmingly positive experience.</p>
+            <p class="main-content__paragraph">“I would have maybe one more [child],” she admitted. “I really, really enjoyed the surrogacy
+                process. I will say, when it came to the breastfeeding time, I was like, ‘Okay, this is the best
+                decision I ever made.’ “</p>
+            <p class="main-content__paragraph">“It’s a game changer, having to not go through [nursing] every few hours,” explained the soon-to-be
+                mother of four. “I can spend so much more time with the older kids and getting them used to the
+                baby.”</p>
+        </article>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
