refactor html class strutuce

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- test -->
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,133 +35,155 @@
     <main class="main-container">
         <section class="headline">
             <ul class="headline__top-link">
-                <li><a class="headline__top-link-text">Home</a> </li>
-                <li><a class="headline__top-link-text">Parents</a></li>
+                <li><a class="headline__top-link__text">Home</a> </li>
+                <li><a class="headline__top-link__text">Parents</a></li>
             </ul>
-                <h1 class="headline__heading">Kim Kardashian and Kanye West Expecting Fourth Child Via Surrogate</h1>
+            <h1 class="headline__heading">Kim Kardashian and Kanye West Expecting Fourth Child Via Surrogate</h1>
             <div class="headline__social-media">
-               <img class="headline__social-media-img" src="img/social-media.png" alt="social media icons">
+                <img class="headline__social-media__img" src="img/social-media.png" alt="social media icons">
             </div>
             <figure class="headline__photo">
-                <img class="headline__photo--img" src="img/img-video.png" alt="video smaple photo">
+                <img class="headline__photo__img" src="img/img-video.png" alt="video smaple photo">
             </figure>
         </section>
         <article class="main-content">
-            <h2 class="main-content__headline">Kanye and Kim Kardashian West are set to welcome another baby into their household that already
+            <h2 class="main-content__headline">Kanye and Kim Kardashian West are set to welcome another baby into their
+                household that already
                 includes daughters Chicago and North, plus son Saint</h2>
             <p class="main-content__paragraph">There’s a new little one heading West!</p>
-            <p class="main-content__paragraph">Kanye and Kim Kardashian West are expecting their fourth child via surrogate, PEOPLE has confirmed.
+            <p class="main-content__paragraph">Kanye and Kim Kardashian West are expecting their fourth child via
+                surrogate, PEOPLE has confirmed.
             </p>
-            <p class="main-content__paragraph">The baby on the way will join big siblings Chicago, 1 this month, Saint, 3, and North, 5½.</p>
-            <p class="main-content__paragraph">Although Kardashian West has made it clear that she loves being a mother, in August, a Keeping Up
+            <p class="main-content__paragraph">The baby on the way will join big siblings Chicago, 1 this month, Saint,
+                3, and North, 5½.</p>
+            <p class="main-content__paragraph">Although Kardashian West has made it clear that she loves being a mother,
+                in August, a Keeping Up
                 with the Kardashians source told PEOPLE that the 38-year-old reality star and rapper West, 41,
                 weren’t “in a huge rush” to give their three children another sibling.</p>
-            <p class="main-content__paragraph">“They have absolutely talked about trying for another baby with the help of a surrogate, but nothing
+            <p class="main-content__paragraph">“They have absolutely talked about trying for another baby with the help
+                of a surrogate, but nothing
                 seems decided for sure,” said the insider, adding of the couple’s then-7-month-old daughter, who
                 was the only one of their children to be born via gestational surrogate, “Chicago is still little,
                 and they have time.”</p>
-            <p class="main-content__paragraph">Want all the latest pregnancy and birth announcements, plus celebrity mom blogs? Click here to get
+            <p class="main-content__paragraph">Want all the latest pregnancy and birth announcements, plus celebrity mom
+                blogs? Click here to get
                 those and more in the PEOPLE Parents newsletter.</p>
-            <figure class="figure-container">
-                <img src="img/img-1.jpg" class="img-responsive" alt="first image" />
-                <figcaption class="img-desc">
+            <figure class="figure">
+                <img src="img/img-1.jpg" class="figure__img" alt="first image" />
+                <figcaption class="figure__img__desc">
                     Kim Kardashian West/Twitter
                 </figcaption>
             </figure>
 
-            <figure class="figure-container">
-                <img src="img/img-2.jpg" class="img-responsive" alt="second image" />
-                <figcaption class="img-desc">
-                    Kanye and Kim Kardashian West with daughter Chicago<span class="img-desc--author">Marcus
+            <figure class="figure">
+                <img src="img/img-2.jpg" class="figure__img" alt="second image" />
+                <figcaption class="figure__img__desc">
+                    Kanye and Kim Kardashian West with daughter Chicago<span class="figure__img__desc__author">Marcus
                         Hyde</span>
                 </figcaption>
             </figure>
-            <figure class="figure-container">
-                <img src="img/img-3.jpg" class="img-responsive" alt="third image" />
-                <figcaption class="img-desc">
-                    Kanye West and son Saint<span class="img-desc--author">Kim Kardashian/Snapchat</span>
+            <figure class="figure">
+                <img src="img/img-3.jpg" class="figure__img" alt="third image" />
+                <figcaption class="figure__img__desc">
+                    Kanye West and son Saint<span class="figure__img__desc__author">Kim Kardashian/Snapchat</span>
                 </figcaption>
             </figure>
-            <p class="main-content__paragraph">RELATED GALLERY: Kim Kardashian Reveals If She and Kanye West Are Planning for Baby No. 4</p>
-            <p class="main-content__paragraph">“They don’t seem to be in a huge rush,” the source further revealed. “They would use the same
+            <p class="main-content__paragraph">RELATED GALLERY: Kim Kardashian Reveals If She and Kanye West Are
+                Planning for Baby No. 4</p>
+            <p class="main-content__paragraph">“They don’t seem to be in a huge rush,” the source further revealed.
+                “They would use the same
                 surrogate if she agrees to help them again. Kim can’t say enough kind words about the surrogate.”
             </p>
-            <p class="main-content__paragraph">A second insider told PEOPLE, “Kim and Kanye were already talking about baby No. 4 when Chicago was
+            <p class="main-content__paragraph">A second insider told PEOPLE, “Kim and Kanye were already talking about
+                baby No. 4 when Chicago was
                 just a couple of days old. And they absolutely would use the surrogate again. They love her.”</p>
-            <figure class="figure-container">
-                <img src="img/img-4.jpg" class="img-responsive" alt="fourth image">
-                <figcaption class="img-desc">
-                    Kim Kardashian West and daughter North<span class="img-desc--author">Kim
+            <figure class="figure">
+                <img src="img/img-4.jpg" class="figure__img" alt="fourth image">
+                <figcaption class="figure__img__desc">
+                    Kim Kardashian West and daughter North<span class="figure__img__desc__author">Kim
                         Kardashian/Instagram</span>
                 </figcaption>
             </figure>
-            <p class="main-content__paragraph">Kardashian West herself has expressed similar thoughts. As she said in an August interview with E!
+            <p class="main-content__paragraph">Kardashian West herself has expressed similar thoughts. As she said in an
+                August interview with E!
                 News after being asked if she and her husband were planning for a fourth child, “I don’t know. I
                 read something that it was, you know — none of that was true.”</p>
-            <p class="main-content__paragraph">“But I’ve been really open about it and talked about it on our show, so I don’t know,” the KKW
+            <p class="main-content__paragraph">“But I’ve been really open about it and talked about it on our show, so I
+                don’t know,” the KKW
                 Beauty guru also told the outlet. “We start filming season 16 next week, so if I think about it
                 more and it’s gonna happen, you’ll definitely see it on the show. But as of now, no.”</p>
-            <p class="main-content__paragraph">RELATED VIDEO: Kim Kardashian West Is Considering Asking Surrogate to Carry Another Baby</p>
-            <p class="main-content__paragraph">In October, Kardashian West revealed that daughter North is a little apprehensive about her existing
+            <p class="main-content__paragraph">RELATED VIDEO: Kim Kardashian West Is Considering Asking Surrogate to
+                Carry Another Baby</p>
+            <p class="main-content__paragraph">In October, Kardashian West revealed that daughter North is a little
+                apprehensive about her existing
                 siblings, admitting that her oldest “acts like an only child at all times” and is “a little
                 confused” about her family dynamic.</p>
-            <p class="main-content__paragraph">“She’s beyond jealousy now. She’s just like, ‘It’s my world,’ ” the reality star said on Ashley
+            <p class="main-content__paragraph">“She’s beyond jealousy now. She’s just like, ‘It’s my world,’ ” the
+                reality star said on Ashley
                 Graham‘s podcast Pretty Big Deal. “She said to me the other day, ‘Mom … we just need to have
                 another baby brother so that Saint can just leave me alone … so the girls can be on this side of
                 the house and the boys can be on that side of the house.’ “</p>
-            <figure class="figure-container">
-                <img src="img/img-5.jpg" class="img-responsive" alt="">
-                <figcaption class="img-desc">
-                    North and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
+            <figure class="figure">
+                <img src="img/img-5.jpg" class="figure__img" alt="">
+                <figcaption class="figure__img__desc">
+                    North and Chicago West<span class="figure__img__desc__author">Kim Kardashian/Instagram</span>
                 </figcaption>
             </figure>
-            <figure class="figure-container">
-                <img src="img/img-6.jpg" class="img-responsive" alt="">
-                <figcaption class="img-desc">
-                    Saint and Chicago West<span class="img-desc--author">Kim Kardashian/Instagram</span>
+            <figure class="figure">
+                <img src="img/img-6.jpg" class="figure__img" alt="">
+                <figcaption class="figure__img__desc">
+                    Saint and Chicago West<span class="figure__img__desc__author">Kim Kardashian/Instagram</span>
                 </figcaption>
             </figure>
-            <p class="main-content__paragraph">RELATED GALLERY: 33 Famous Families Who’ve Welcomed Children Through Surrogacy</p>
-            <p class="main-content__paragraph">Though Kardashian West has been candid about her fears surrounding surrogacy and how she thinks it
+            <p class="main-content__paragraph">RELATED GALLERY: 33 Famous Families Who’ve Welcomed Children Through
+                Surrogacy</p>
+            <p class="main-content__paragraph">Though Kardashian West has been candid about her fears surrounding
+                surrogacy and how she thinks it
                 “is so much harder” than pregnancy, she opened up in May about how it ultimately was an
                 overwhelmingly positive experience.</p>
-            <p class="main-content__paragraph">“I would have maybe one more [child],” she admitted. “I really, really enjoyed the surrogacy
+            <p class="main-content__paragraph">“I would have maybe one more [child],” she admitted. “I really, really
+                enjoyed the surrogacy
                 process. I will say, when it came to the breastfeeding time, I was like, ‘Okay, this is the best
                 decision I ever made.’ “</p>
-            <p class="main-content__paragraph">“It’s a game changer, having to not go through [nursing] every few hours,” explained the soon-to-be
+            <p class="main-content__paragraph">“It’s a game changer, having to not go through [nursing] every few
+                hours,” explained the soon-to-be
                 mother of four. “I can spend so much more time with the older kids and getting them used to the
                 baby.”</p>
         </article>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="footer-logo">
-            <img class="footer-logo-img" src="img/footer/people-footer-logo.png" alt="people logo" />
+        <h2 class="footer__heading-logo">
+            <img class="footer__heading-logo__img" src="img/footer/people-footer-logo.png" alt="people logo" />
+        </h2>
+        <div class="footer__left-container">
+            <h2 class="footer__heading">Magazines & More</h2>
+            <figure class="footer__left-container__figure">
+                <img class="footer__left-container__img" src="img/footer/footer-add.png" alt="Sign up add" />
+            </figure>
         </div>
-        <div class="footer-inner-container">
-            <div class="footer-inner-container-left">
-                <h2>Magazines & More</h2>
-                <img class="footer-inner-container--ad" src="img/footer/footer-add.png" alt="Sign up add" />
-            </div>
-            <div class="footer-inner-container-middle">
-                <h2>Learn More</h2>
-                <ul class="footer-inner-container-middle--links">
-                    <li>Subscribe</li>
-                    <li>Advertise</li>
-                    <li>Sitemap</li>
-                    <li>Student Offer</li>
-                </ul>
-            </div>
-            <div class="footer-inner-container-right">
-                <h2>Connect</h2>
-                <ul class="footer-inner-container-right--links">
-                    <li>Follow Us</li>
-                    <li><img class="footer-inner-container-right--media" src="img/footer/footer-social-media.png"
-                            alt="social media icons"></li>
-                </ul>
-                <span>Subscribe to Our Newsletter</span>
-                <button>Sign Up</button>
-            </div>
+        <div class="footer__middle-container">
+            <h2 class="footer__heading">Learn More</h2>
+            <ul class="footer__middle-container__list">
+                <li class="footer__middle-container__item"> <a class="footer__middle-container__link"
+                        href="">Subscribe</a> </li>
+                <li class="footer__middle-container__item"> <a class="footer__middle-container__link"
+                        href="">Advertise</a> </li>
+                <li class="footer__middle-container__item"> <a class="footer__middle-container__link" href="">Sitemap</a>
+                </li>
+                <li class="footer__middle-container__item"> <a class="footer__middle-container__link" href=""> Student
+                        Offer</a></li>
+            </ul>
+        </div>
+        <div class="footer__right-container">
+            <h2 class="footer__heading">Connect</h2>
+                <p class="footer__right-container__text">Follow Us</p>
+                <figure>
+                    <img class="footer__right-container__social-media" src="img/footer/footer-social-media.png"
+                        alt="social media icons">
+                    </figure>
+            <p class="footer__right-container__text">Subscribe to Our Newsletter</p>
+            <button class="footer__right-cotainer__btn">Sign Up</button>
         </div>
     </footer>
 </body>
