refactor css footer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
-
 <body>
     <header>
         <nav class="navbar">
@@ -33,6 +31,7 @@
     </header>
     <!-- MAIN SECTION -->
     <main class="main-container">
+        <!-- HEADING -->
         <section class="headline">
             <ul class="headline__top-link">
                 <li><a class="headline__top-link__text">Home</a> </li>
@@ -46,10 +45,16 @@
                 <img class="headline__photo__img" src="img/img-video.png" alt="video smaple photo">
             </figure>
         </section>
+        <!-- MAIN POST -->
         <article class="main-content">
             <h2 class="main-content__headline">Kanye and Kim Kardashian West are set to welcome another baby into their
                 household that already
                 includes daughters Chicago and North, plus son Saint</h2>
+                <div class="author">
+                    <span>By </span><a href="#" class="author__name">Jen Juneau 
+                        <img class="author__twitter-icon" src="img/twitter-author-icon.png" alt="">
+                    </a>
+                </div>
             <p class="main-content__paragraph">There’s a new little one heading West!</p>
             <p class="main-content__paragraph">Kanye and Kim Kardashian West are expecting their fourth child via
                 surrogate, PEOPLE has confirmed.
@@ -183,9 +188,8 @@
                         alt="social media icons">
                     </figure>
             <p class="footer__right-container__text">Subscribe to Our Newsletter</p>
-            <button class="footer__right-cotainer__btn">Sign Up</button>
+            <button class="footer__btn">Sign Up</button>
         </div>
     </footer>
 </body>
-
 </html>
