add media queries to footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -50,11 +52,11 @@
             <h2 class="main-content__headline">Kanye and Kim Kardashian West are set to welcome another baby into their
                 household that already
                 includes daughters Chicago and North, plus son Saint</h2>
-                <div class="author">
-                    <span>By </span><a href="#" class="author__name">Jen Juneau 
-                        <img class="author__twitter-icon" src="img/twitter-author-icon.png" alt="">
-                    </a>
-                </div>
+            <div class="author">
+                <span>By </span><a href="#" class="author__name">Jen Juneau
+                    <img class="author__twitter-icon" src="img/twitter-author-icon.png" alt="">
+                </a>
+            </div>
             <p class="main-content__paragraph">There’s a new little one heading West!</p>
             <p class="main-content__paragraph">Kanye and Kim Kardashian West are expecting their fourth child via
                 surrogate, PEOPLE has confirmed.
@@ -174,7 +176,8 @@
                         href="">Subscribe</a> </li>
                 <li class="footer__middle-container__item"> <a class="footer__middle-container__link"
                         href="">Advertise</a> </li>
-                <li class="footer__middle-container__item"> <a class="footer__middle-container__link" href="">Sitemap</a>
+                <li class="footer__middle-container__item"> <a class="footer__middle-container__link"
+                        href="">Sitemap</a>
                 </li>
                 <li class="footer__middle-container__item"> <a class="footer__middle-container__link" href=""> Student
                         Offer</a></li>
@@ -182,14 +185,15 @@
         </div>
         <div class="footer__right-container">
             <h2 class="footer__heading">Connect</h2>
-                <p class="footer__right-container__text">Follow Us</p>
-                <figure>
-                    <img class="footer__right-container__social-media" src="img/footer/footer-social-media.png"
-                        alt="social media icons">
-                    </figure>
+            <p class="footer__right-container__text">Follow Us</p>
+            <figure>
+                <img class="footer__right-container__social-media" src="img/footer/footer-social-media.png"
+                    alt="social media icons">
+            </figure>
             <p class="footer__right-container__text">Subscribe to Our Newsletter</p>
             <button class="footer__btn">Sign Up</button>
         </div>
     </footer>
 </body>
+
 </html>
